# ml_game

./: .gitignore  README.md
backend/: .gitignore  README.md  commands.py  mlruns.db  pyproject.toml  pytest.ini  setup.py
backend/answer_classifier/: datamodule.py  infer.py  logger_selector.py  model.py  train.py
backend/api/: api.py
backend/common/: checkpoint_utils.py  context_provider.py  plotter.py
backend/conf/: config.yaml
backend/conf/base/: base.yaml
backend/conf/classifier/: classifier.yaml
backend/conf/dataparser/: dataparser.yaml
backend/conf/qa/: qa.yaml
backend/dataparser/: build_graded_dataset.py  dataset.py  generate_synthetic_data.py  question_context.py
backend/eda/: EDA.md  eda.py
backend/question_generator/: bert_score.py  datamodule.py  infer.py  logger_selector.py  model.py  train.py
backend/tests/: conftest.py  test_api_service.py  test_cli_commands.py  test_simple_integration.py
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.ts  config.ts  mockServices.ts  types.ts
frontend/src/components/: AnswerInput.css  AnswerInput.tsx  CountdownTimer.css  CountdownTimer.tsx  FlipCard.css  FlipCard.tsx  GameLayout.css  GameLayout.tsx  GameOver.css  GameOver.tsx  MultplayerPanel.css  MultplayerPanel.tsx  PlayerStatus.css  PlayerStatus.tsx  QuestionCard.css  QuestionCard.tsx  SettingsScreen.css  SettingsScreen.tsx  StarterScreen.tsx
frontend/src/stores/: GameStore.ts
frontend/src/styles/: StarterScreen.css
(+3 files in other folders)
